sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr = getNombreValeurs();
  for ( i<-1 to lgr-1 ){
  	var v=i;
  	for ( j<-0 to i-1){
      if (getValeur(i-j)>getValeur(v){
        echange(i-j,i-j-1);
      }
      echange(i-j,v)
    }
  }
          }}